[gd_scene load_steps=13 format=3 uid="uid://bd0ro0enhhy15"]

[ext_resource type="Texture2D" uid="uid://c12ynemo0ghot" path="res://SpritePeople/Face/eye.png" id="1_16xq7"]
[ext_resource type="Script" path="res://SpritePeople/spritepeople.gd" id="1_dqgss"]
[ext_resource type="Texture2D" uid="uid://b130ninprg7pl" path="res://SpritePeople/Body/skin.png" id="2_n1qga"]
[ext_resource type="Texture2D" uid="uid://dtlr51itlq8qc" path="res://SpritePeople/Face/mouth.png" id="2_ohun7"]
[ext_resource type="Texture2D" uid="uid://dvyplw3dbuh8x" path="res://SpritePeople/Face/eyelash.png" id="3_0wabg"]
[ext_resource type="Texture2D" uid="uid://chobekokicoq6" path="res://SpritePeople/Face/neck.png" id="4_4mcnp"]
[ext_resource type="Texture2D" uid="uid://c4sn8s8cnk8fi" path="res://SpritePeople/Hair/hair.png" id="4_5kjxb"]
[ext_resource type="Texture2D" uid="uid://dnr4sw7c1n5ji" path="res://SpritePeople/Body/pants.png" id="4_x325k"]
[ext_resource type="Texture2D" uid="uid://d15l51g5btygr" path="res://SpritePeople/Body/shirt.png" id="5_6tyxn"]
[ext_resource type="Texture2D" uid="uid://c2rgjewv8xtnd" path="res://SpritePeople/Body/shoes.png" id="6_c8yp4"]
[ext_resource type="Texture2D" uid="uid://ddavjy5o08ygb" path="res://SpritePeople/Body/black.png" id="12_bo4d6"]
[ext_resource type="Texture2D" uid="uid://buj8pmuaunket" path="res://SpritePeople/Body/white.png" id="12_of7hn"]

[node name="SpritePeople" type="Node2D"]
script = ExtResource("1_dqgss")
skin_color = Color(0.5, 0.25, 0, 1)
eyel_frame = 17
eyelash_color = 4
neck_frame = 9
neck_color = Color(0.270841, 0.270841, 0.270841, 1)
hair_frame = 2
hair_color = Color(0.398224, 0.335948, 0.542314, 1)
shirt_color = Color(0.401419, 0.342062, 0.247665, 1)
pants_color = Color(0.25008, 0.196665, 0.163645, 1)
export_code = "{\"eyel_frame\":17,\"eyelash_color\":4,\"eyer_frame\":0,\"hair_color_b\":0.542313694953918,\"hair_color_g\":0.335948020219803,\"hair_color_r\":0.398224025964737,\"hair_frame\":2,\"neck_color_b\":0.270840525627136,\"neck_color_g\":0.270840525627136,\"neck_color_r\":0.270840525627136,\"neck_frame\":9,\"pants_color_b\":0.163645371794701,\"pants_color_g\":0.196664661169052,\"pants_color_r\":0.250079959630966,\"pants_frame\":0,\"shirt_color_b\":0.247664630413055,\"shirt_color_g\":0.342061966657639,\"shirt_color_r\":0.401418685913086,\"shirt_frame\":0,\"skin_color_b\":0,\"skin_color_g\":0.25,\"skin_color_r\":0.5}"

[node name="Sprite" type="Node2D" parent="."]

[node name="Skin" type="Sprite2D" parent="Sprite"]
modulate = Color(0.5, 0.25, 0, 1)
position = Vector2(0, 5)
texture = ExtResource("2_n1qga")

[node name="Hair" type="Sprite2D" parent="Sprite"]
modulate = Color(0.398224, 0.335948, 0.542314, 1)
position = Vector2(0, 5)
texture = ExtResource("4_5kjxb")
hframes = 4
frame = 2

[node name="Clothes" type="Node2D" parent="Sprite"]

[node name="Pants" type="Sprite2D" parent="Sprite/Clothes"]
modulate = Color(0.25008, 0.196665, 0.163645, 1)
position = Vector2(0, 5)
texture = ExtResource("4_x325k")
hframes = 2

[node name="Shirt" type="Sprite2D" parent="Sprite/Clothes"]
modulate = Color(0.401419, 0.342062, 0.247665, 1)
position = Vector2(0, 5)
texture = ExtResource("5_6tyxn")
hframes = 2

[node name="Neck" type="Sprite2D" parent="Sprite/Clothes"]
modulate = Color(0.270841, 0.270841, 0.270841, 1)
position = Vector2(0, 7.5)
texture = ExtResource("4_4mcnp")
hframes = 10
frame = 9

[node name="Shoes" type="Sprite2D" parent="Sprite/Clothes"]
modulate = Color(0.35, 0.35, 0.35, 1)
position = Vector2(0, 5)
texture = ExtResource("6_c8yp4")

[node name="Face" type="Node2D" parent="Sprite"]

[node name="EyeL" type="Sprite2D" parent="Sprite/Face"]
position = Vector2(-2, -1)
texture = ExtResource("1_16xq7")
hframes = 20
frame = 17

[node name="EyelashL" type="Sprite2D" parent="Sprite/Face"]
position = Vector2(-3.5, -1.5)
texture = ExtResource("3_0wabg")
hframes = 5
frame = 4

[node name="EyeR" type="Sprite2D" parent="Sprite/Face"]
position = Vector2(2, -1)
texture = ExtResource("1_16xq7")
hframes = 20

[node name="EyelashR" type="Sprite2D" parent="Sprite/Face"]
position = Vector2(3.5, -2.5)
texture = ExtResource("3_0wabg")
hframes = 5
frame = 4

[node name="Mouth" type="Sprite2D" parent="Sprite/Face"]
position = Vector2(0, 2)
texture = ExtResource("2_ohun7")
hframes = 3

[node name="Black" type="Sprite2D" parent="Sprite"]
position = Vector2(0, 5)
texture = ExtResource("12_bo4d6")
hframes = 6
frame = 2

[node name="White" type="Sprite2D" parent="Sprite"]
visible = false
position = Vector2(0, 5)
texture = ExtResource("12_of7hn")
hframes = 6
frame = 2
